# goit-web-hm-09

BeautifulSoup/: main.py  pyproject.toml
Scrapy_/: authors.json  main.py  pyproject.toml
