[tool.poetry]
name = "beautifulsoup"
version = "0.1.0"
description = ""
authors = ["YaroslavPich <pich.yaroslav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
lxml = "^5.2.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
